ME events updated

--- a/events.html
+++ b/events.html
@@ -1426,7 +1426,17 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>ROADIES (DAY 1 &amp; 2)<br>STAFF CO-ORDINATOR: Arun K<br>STUDENT CO-ORDINATORS: SUDHAKARA MENON SURYA (7591974669)<br>PRIZE MONEY: Rs.300<br>Rs. 100 PER TEAM (1 TO 4 MEMBERS)<br>VENUE: NEW PARKING GROUND (Near R&amp;D Block)</p>
+										<p>ROADIES (DAY 1 &amp; 2)<br>
+										<q><b>TRY INSANE OR REMAIN THE SAME</b></q><br>Team must complete the given set of challenges in the allotted time.<br>RULES AND REGULATIONS:<br>
+										<ul>
+											<li>Each team comprises of only 2 members. Students from different institutes can form a team.</li>
+											<li>Entry fee per head is Rs. 25.</li>
+											<li>Each member must bear identity card of his/her respective institution.</li>
+											<li>Event coordinators have the right to take the final decision in case of any argument.</li>
+											<li>The management/coordinators will not be responsible for any injuries or accidents that may occur during the play. All participants are requested to participate at their own risk however, maximum safety of each will be assured by the coordinators and staff.</li>
+											<li>If any failure occurs during the challenge participants will be asked to restart from the checkpoint.</li>
+										</ul><br>*Rules may subject to change
+										<br>STAFF CO-ORDINATOR: Arun K<br>STUDENT CO-ORDINATORS: SUDHAKARA MENON SURYA (7591974669)<br>PRIZE MONEY: Rs.300<br>Rs. 100 PER TEAM (1 TO 4 MEMBERS)<br>VENUE: NEW PARKING GROUND (Near R&amp;D Block)</p>
 									</div>
 								</section>
 							</div>
@@ -1485,7 +1495,7 @@
 							</div>
 						</div>
 					</div>
-					<!-- SUPER CONTRAPTION -->
+					<!-- MEXTRAPTION -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -1493,7 +1503,7 @@
 									<div class="news-w3img">
 										<a href="#" data-toggle="modal" data-target="#memyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
-									<h4><a href="#" data-toggle="modal" data-target="#memyModal3">SUPER CONTRAPTION</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#memyModal3">MEXTRAPTION</a></h4>
 								</div>
 							</div>
 						</div>
@@ -1502,12 +1512,28 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									SUPER CONTRAPTION
+									MEXTRAPTION
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>SUPER CONTRAPTION (DAY 1)<br>STAFF CO-ORDINATOR: Abraham Antony<br>STUDENT CO-ORDINATORS: ANZ JOY (9496138743)<br>PRIZE MONEY: FIRST: Rs.2000 SECOND: Rs. 1000<br>Rs. 50 PER HEAD (2 MEMBERS)<br>VENUE: NEAR MECH TREE</p>
+										<p>SUPER CONTRAPTION (DAY 2)<br>
+										MEXTRAPTION  is a deliberately complex contraption in which a series of devices that perform simple tasks are linked together to produce a domino effect in which activating one device triggers the next device in the sequence. The contestants are required to use the provided materials to initiate a continuous chain reaction so that the final output is obtained.<br>Event Rules<br>
+										<ul>
+											<li>This is a group event: Maximum of two members is allowed in each team.</li>
+											<li>Registration fee: 50/ Head.</li>
+										</ul><br>Game Rules<br>
+										<ul>
+											<li>Each team is given 1 minute to analyze the contraption layout.</li>
+											<li>An additional 3 minutes are given to set up the chain reaction.</li>
+											<li>After setting up, the chain reaction will be initiated and the time taken for the final output is recorded.</li>
+											<li>Contestants are not allowed to interfere with the layout once the chain reaction is initiated.</li>
+											<li>Tools provided: Ruler, Vernier caliper, Calculator, Balls of varying diameters .Wooden Blocks.</li>
+											<li>Contestants are required to use only the materials provided.</li>
+											<li>Team with the best time recorded for the final output is declared as winners.</li>
+											<li>Judges decision will be final.</li>
+										</ul>
+										<br>STAFF CO-ORDINATOR: Abraham Antony<br>STUDENT CO-ORDINATORS: ANZ JOY (9496138743)<br>Jestin James (9567671247)<br>Arun Jose (9946712387)<br>Joyal John (9497456597)<br>PRIZE MONEY: FIRST: Rs.2000 SECOND: Rs. 1000<br>Rs. 50 PER HEAD (2 MEMBERS)<br>VENUE: Infront of heat engine lab</p>
 									</div>
 								</section>
 							</div>
@@ -1541,7 +1567,7 @@
 							</div>
 						</div>
 					</div>
-					<!-- PAPER PRESENTATION -->
+					<!-- PRAKALPA -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -1549,7 +1575,7 @@
 									<div class="news-w3img">
 										<a href="#" data-toggle="modal" data-target="#memyModal5"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
-									<h4><a href="#" data-toggle="modal" data-target="#memyModal5">PAPER PRESENTATION</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#memyModal5">PRAKALPA</a></h4>
 								</div>
 							</div>
 						</div>
@@ -1558,18 +1584,26 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									PAPER PRESENTATION
+									PRAKALPA
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>PAPER PRESENTATION (DAY 1)<br>STAFF CO-ORDINATOR: Dr. Shunmugesh K<br>STUDENT CO-ORDINATORS: JOEL ANTONY (8138820737)<br>PRIZE MONEY: FIRST-Rs.3000, SECOND-Rs.2000<br>Rs. 50 PER HEAD (1 - 4 MEMBERS)<br>TIME: 12:00 PM TO 4:00 PM<br>VENUE: MECH CAD LAB</p>
+										<p>PAPER PRESENTATION (DAY 1)<br><br>Instructions<br>
+										<ul>
+											<li>The team should have not more than <b>4 members</b>.</li>
+											<li>Maximum time for presentation- <b>10 minutes and 5 minutes for questions and answers</b>.</li>
+											<li>Students who want to participate are requested to contact the coordinators.</li>
+											<li>The abstract should be sent to *mebodhi@gmail.com* on or before <b>24-aug- 17</b>.</li>
+											<li>Registration fee <b>Rs 50/-</b> per head.</li>
+										</ul>
+										<br>STAFF CO-ORDINATOR: Dr. Shunmugesh K<br>STUDENT CO-ORDINATORS: JOEL ANTONY (8138820737)<br>VIGHNESH SIVA (8281126403)<br>PRIZE MONEY: FIRST-Rs.3000, SECOND-Rs.2000<br>Rs. 50 PER HEAD (1 - 4 MEMBERS)<br>TIME: 12:00 PM TO 4:00 PM<br>VENUE: MECH CAD LAB</p>
 									</div>
 								</section>
 							</div>
 						</div>
 					</div>
-					<!-- PROJECT EXPO -->
+					<!-- SRISTI -->
 					<div class="news-agileinfo">
 						<div class="col-md-3 gallery-grid ews-w3lgrids">
 							<div class="grid">
@@ -1577,7 +1611,7 @@
 									<div class="news-w3img">
 										<a href="#" data-toggle="modal" data-target="#memyModal6"><img src="images/ME/expo.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
-									<h4><a href="#" data-toggle="modal" data-target="#memyModal6">PROJECT EXPO</a></h4>
+									<h4><a href="#" data-toggle="modal" data-target="#memyModal6">SRISTI</a></h4>
 								</div>
 							</div>
 						</div>
@@ -1586,12 +1620,12 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									PROJECT EXPO
+									SRISTI
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>PROJECT EXPO (DAY 1 &amp; 2)<br>STAFF CO-ORDINATOR: Tijo Jose<br>STUDENT CO-ORDINATORS: NIVIN P JOHNY (8089431312<br>TIME: 10:00 AM TO 4:00 PM</p>
+										<p>PROJECT EXPO (DAY 1 &amp; 2)<br><q><b>THE BEST WAY TO PREDICT THE FUTURE IS TO INVENT IT</b></q><br>Sristi is a project expo conducted by Mechanical Engineering. VJCET is successful in developing a lot of in-house projects in the institution. The innovations which were developed by the students of VJCET are put to display here. You can see these projects on 25 &amp; 26 August 2017 during Bodhi10.0.<br>STAFF CO-ORDINATOR: Tijo Jose<br>STUDENT CO-ORDINATORS: NIVIN P JOHNY (8089431312<br>TIME: 10:00 AM TO 4:00 PM<br>Venue: In front of Machine Tools Lab</p>
 									</div>
 								</section>
 							</div>
@@ -1619,7 +1653,8 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>MECH ZONE (DAY 1 &amp; 2)<br>STAFF CO-ORDINATOR: Frenosh K Francis<br>STUDENT CO-ORDINATORS: ALI HAMDHAN (9744998474)<br>TIME: 10 AM TO 4 PM<br>VENUE: IN FRONT &amp; INSIDE MECHANICAL WORKSHOP</p>
+										<p>MECH ZONE (DAY 1 &amp; 2)<br><b>&quot; Inspiration is only beginning rest is all about being Mechanical engineer &quot;</b><br>MEX zone is a pavilion for showcasing incredible engineering wonders. It incorporates a full size military panzer which resembles an actual one in size and systems. Mex zone also includes illustrations of dozens of mysterious engineering principles which are sure to make you go WoW…
+										<br>STAFF CO-ORDINATOR: Frenosh K Francis<br>STUDENT CO-ORDINATORS: ALI HAMDHAN (9744998474)<br>TIME: 10 AM TO 4 PM<br>VENUE: IN FRONT &amp; INSIDE MECHANICAL WORKSHOP</p>
 									</div>
 								</section>
 							</div>
