--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="keywords" content="BODHI, VJCET, techfest, bodhi 10.0, bodhi official" />
+	<meta name="description" content="Bodhi10.0 is the Annual TechFest of VJCET. Come Join us and win prizes by showing off and exploring your talent on 25th and 26th August 2017">
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link rel="icon" href="../images/bodhi.png">
@@ -159,7 +160,7 @@
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Spot Registration</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal3">SHUTTER UP</a></h4> 
-								<p><br>Photography is the simultaneous recognition in a fraction of a second of the significance of an event. Do you have a skill in capturing photos? Then here's an opportunity for it...<br></p> 
+								<p>Photography is the simultaneous recognition in a fraction of a second of the significance of an event. Do you have a skill in capturing photos? Then here's an opportunity for it...<br></p> 
 							</div>
 						</div>
 					</div>
@@ -193,7 +194,7 @@
 		</div>
 		<div class="testimonials">
 			<div class="container"> 
-				<h3 class="w3ls_head">Guests</h3>
+				<h3 class="w3ls_head">Chief Guest</h3>
 					<div class="testi-w3agileinfo"> 
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation" class="active">
@@ -333,7 +334,7 @@
 											<li>Theme will be announced at 9 am.</li>
 											<li>Only Digital Cameras can be used.</li>
 											<li>The photos must be taken inside the college campus.</li>
-											<li>EThe submitted images must be original and taken within the given time frame only</li>
+											<li>The submitted images must be original and taken within the given time frame only</li>
 											<li>No editing work should be done.</li>
 											<li>The participant only have to submit his/her best pictures of the fest before 2pm on the registration desk.</li>
 											<li>Decision of the judges will  be final and binding.</li>
@@ -344,8 +345,8 @@
 											<li>NO. OF PARTICIPANTS: 1</li>
 											<li>PRIZES WORTH 4K. FIRST: 2.5k SECOND: 1.5k</li>
 											<li>DATE: 26th August</li>
-											<li>TIME: 10 am to 3 pm </li>
-											<li>Staff Coordinator: Eldhose Paul ()9744167116)</li>
+											<li>TIME: 10 am to 2 pm </li>
+											<li>Staff Coordinator: Eldhose Paul (9744167116)</li>
 											<li>Student Coordinator: Mathew George (9400533211)</li>
 										</ul>
 									</p>
@@ -358,7 +359,7 @@
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
-								SAVENGERS
+								AVENGERS
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 							</div>
 							<section>
