--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 	<div class="services news">
 		<div class="container"> 
 			<div class="new-w3l">
-				<h3 class="w3ls_head">General Events</h3>
-				<p class="para">Tighten up 'coz its your chance to win<span> amazing prizes</span> for the events below. Hurry Up and Register to win...!!!</p>			
+				<h3 class="w3ls_head"><span style="color: #ff8000;">General Events</span></h3>
+				<p class="para"><span style="color: #ff8000; font-size: 18px"><b>Tighten up 'coz its your chance to win amazing prizes for the events below. Hurry Up and Register to win...!!!</b></span></p>			
 				</div>
 				<div class="news-agileinfo">
 					<div class="col-md-4 news-w3lgrids">
