--- a/events.html
+++ b/events.html
@@ -1502,7 +1502,7 @@
 							<div class="grid">
 								<div class="news-w3imgtext">
 									<div class="news-w3img">
-										<a href="#" data-toggle="modal" data-target="#memyModal3"><img src="images/EC/responsive.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
+										<a href="#" data-toggle="modal" data-target="#memyModal3"><img src="images/ME/mech.png" width="100" height="100" class="img-responsive zoom-img" alt=""/></a>
 									</div>
 									<h4><a href="#" data-toggle="modal" data-target="#memyModal3">MEXTRAPTION</a></h4>
 								</div>
