--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="keywords" content="BODHI, VJCET, techfest, bodhi 10.0, bodhi official" />
-	<meta name="description" content="Bodhi10.0 is the Annual TechFest of VJCET. Come Join us and win prizes by showing off and exploring your talent on 25th and 26th August 2017">
+	<meta name="description" content="Bodhi is the Annual TechFest of VJCET. Come Join us and win prizes by showing off and exploring your talent on 25th and 26th August 2017">
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link rel="icon" href="../images/bodhi.png">
@@ -199,7 +199,8 @@
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation" class="active">
 								<a href="#testi" aria-controls="testi" role="tab" data-toggle="tab">
-									<img src="images/jibinJose.png" alt="" style="border-radius: 15px 50px 30px" height="200" width="200" /></a>
+									<img src="images/jibinJose.png" alt="" style="border-radius: 15px 50px 30px" height="200" width="200" />
+								</a>
 
 							</li>
 						</ul> 
