--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						+'<li><div><span>' + seconds +'</span>SECOND' + (seconds > 1 ? 'S' : '') +'</div></li>';
 					})();
 				</script>
-				<!-- flexSlider -->
+				<!-- //flexSlider 
 				<script defer src="js/jquery.flexslider.js"></script>
 				<script type="text/javascript">
 					$(window).load(function(){
@@ -101,12 +101,12 @@
 							}
 						});
 					});
-				</script>
+				</script> -->
 			</div>
 		</div>
 	</div>
 </div>
-<div class="w3-about text-center">
+<!-- <div class="w3-about text-center">
 	<div class="container">
 		<h2 class="w3ls_head">The Clock is Ticking</h2>
 		<p class="para"><span style="color: white;"><br><br><br><br></span></p>
@@ -120,7 +120,7 @@
 		</div>
 		<p class="para"><span style="color: white;"><br><br><br><br></span></p>
 	</div>
-</div>
+</div> -->
 	<div class="services news">
 		<div class="container"> 
 			<div class="new-w3l">
@@ -199,7 +199,7 @@
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation" class="active">
 								<a href="#testi" aria-controls="testi" role="tab" data-toggle="tab">
-									<img src="images/jibinJose.png" alt="" class="image-round-frame" style="border: 2px solid dark; border-radius: 100%; max-width: 250px;" />
+									<img src="images/jibinJose.jpg" alt="" style="border: 2px solid dark; border-radius: 100%; max-width: 250px;" />
 								</a>
 
 							</li>
