--- a/events.html
+++ b/events.html
@@ -413,7 +413,7 @@
 											<li>Complimentary food coupons will be issued for all participants</li>
 											<li>If number of participants are below 15, registration fees and prize money will be reduced.</li>
 										</ul>
-										<br>STAFF CO-ORDINATOR: Mr. Babu T Chacko, Mr. Aneesh Kurian<br><a href="http://bodhi100.typeform.com/to/kNiw6y" target="_blank"><button>Register Now</button></a><br>STUDENT CO-ORDINATORS: Sajay Thomas, Amal J<br>PRIZE MONEY: FIRST -Rs.25000, SECOND -Rs.10000, THIRD - Rs.5000<br>Rs.1500/- per team (max. 4 members)<br>VENUE: Main Auditorium + Ground</p>
+										<br>STAFF CO-ORDINATOR: Mr. Babu T Chacko, Mr. Aneesh Kurian<br><a href="http://bodhi100.typeform.com/to/kNiw6y" target="_blank"><button>Register Now</button></a><br>STUDENT CO-ORDINATORS: Sajay Thomas (8547533024), Amal J (9745359717)<br>PRIZE MONEY: FIRST -Rs.25000, SECOND -Rs.10000, THIRD - Rs.5000<br>Rs.1500/- per team (max. 4 members)<br>VENUE: Main Auditorium + Ground</p>
 									</div>
 								</section>
 							</div>
@@ -489,7 +489,7 @@
 											<li>The organizers reserve the right to change the rules as they deem fit.</li>
 											<li>When a team is called for match, they must report within five minutes. Students must bring their college ID card.</li>
 											<li>Judges decision will be final.</li>
-										</ul><br>STAFF CO-ORDINATOR: Mr. Sharone Varghese<br>STUDENT CO-ORDINATORS: Liyas sunny<br>Jithin Reji<br>PRIZE MONEY: FIRST -Rs.5000, SECOND -Rs.3000<br>"Rs.200/- per team (max. 2 members playing)"<br>VENUE: Canteen Front</p>
+										</ul><br>STAFF CO-ORDINATOR: Mr. Sharone Varghese<br>STUDENT CO-ORDINATORS: Liyas sunny (9400109707)<br>Jithin Reji (7403900273)<br>PRIZE MONEY: FIRST -Rs.5000, SECOND -Rs.3000<br>Rs.200/- per team (max. 2 members playing)<br>VENUE: Canteen Front</p>
 									</div>
 								</section>
 							</div>
@@ -526,7 +526,7 @@
 											<li>Registration fee is Rs. 100 per team.</li>
 											<li>After the submission of abstract, a panel of judges will go through the material and the shortlisted candidates will be notified later.</li>
 											<li>Decision of judges will be final.</li>
-										<ul><br>STAFF CO-ORDINATOR: Ms. Mereya Baby<br>STUDENT CO-ORDINATORS: Anu Domini<br>Effrin Benjamin Thomson<br>PRIZE MONEY: FIRST-Rs.3000, SECOND Rs-2000, THIRD-Rs.1000<br>Rs.100/- per team (max. 2 members)<br>VENUE: EEE Computer Lab</p>
+										<ul><br>STAFF CO-ORDINATOR: Ms. Mereya Baby<br>STUDENT CO-ORDINATORS: Anu Domini (9496707511)<br>Effrin Benjamin Thomson (8848310905)<br>PRIZE MONEY: FIRST-Rs.3000, SECOND Rs-2000, THIRD-Rs.1000<br>Rs.100/- per team (max. 2 members)<br>VENUE: EEE Computer Lab</p>
 									</div>
 								</section>
 							</div>
@@ -562,7 +562,7 @@
 											<li>Project abstract should be mailed on or before 23 rd August. Abstract should include email id, name of the participants and the name of their institution.</li>
 											<li>The decisions by the judging panel will be final.</li>
 										</ul>
-										<br>STAFF CO-ORDINATOR: Ms. Smitha Jacob<br>Ms. Breeza Paulose<br>STUDENT CO-ORDINATORS: Aishwarya  K S<br>Sreelakshmi S<br>PRIZE MONEY: First: Rs. 4000<br>Second: Rs. 2500<br>Rs.100/- per team (max. 5 members)<br>VENUE: Machines Lab</p>
+										<br>STAFF CO-ORDINATOR: Ms. Smitha Jacob<br>Ms. Breeza Paulose<br>STUDENT CO-ORDINATORS: Aishwarya  K S (9496211340)<br>Sreelakshmi S (8086604630)<br>PRIZE MONEY: First: Rs. 4000<br>Second: Rs. 2500<br>Rs.100/- per team (max. 5 members)<br>VENUE: Machines Lab</p>
 									</div>
 								</section>
 							</div>
@@ -599,7 +599,7 @@
 											<li>Team members are responsible for any damage caused to the equipments</li>
 											<li>Violation of rules will lead to disqualification</li>
 										</ul>
-										<br>STAFF CO-ORDINATOR: Mr. Sharone Varghese<br>STUDENT CO-ORDINATORS: Sachin Jose Mathew<br>Sarath N Gopi<br>PRIZE MONEY: Rs. 3000<br>Rs. 150/- per team (3 member per team)<br>VENUE: Measurements Lab</p>
+										<br>STAFF CO-ORDINATOR: Mr. Sharone Varghese<br>STUDENT CO-ORDINATORS: Sachin Jose Mathew (9947441750)<br>Sarath N Gopi (9388815820)<br>PRIZE MONEY: Rs. 3000<br>Rs. 150/- per team (3 member per team)<br>VENUE: Measurements Lab</p>
 									</div>
 								</section>
 							</div>
@@ -627,7 +627,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>KURUSHETRA (DAY 2)<br>STAFF CO-ORDINATOR: Ms. Seena Paul<br>Mr. Jose Jacob<br>Ms. Sherin Tom<br>STUDENT CO-ORDINATORS: Anjo Jose<br>Sarga Jose<br>PRIZE MONEY: FIRST-Rs.5000, SECOND-Rs.3000, THIRD-Rs.1000<br>Rs.150/- per team (max. 2 members) (Spot Registration)<br>VENUE: PE LAB</p>
+										<p>KURUSHETRA (DAY 2)<br>STAFF CO-ORDINATOR: Ms. Seena Paul<br>Mr. Jose Jacob<br>Ms. Sherin Tom<br>STUDENT CO-ORDINATORS: Anjo Jose (9496916934)<br>Sarga Jose (8281886475)<br>PRIZE MONEY: FIRST-Rs.5000, SECOND-Rs.3000, THIRD-Rs.1000<br>Rs.150/- per team (max. 2 members) (Spot Registration)<br>VENUE: PE LAB</p>
 									</div>
 								</section>
 							</div>
