--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 						</ul>
 						<!-- <ul id="countdown" class="col-md-3 pull-right"></ul> -->
 					</div>
-					
 				</section>
-				<script type="text/javascript">
+				<!-- <script type="text/javascript">
 					(function countdown(){   
 						var launch_date = new Date (Date.parse("Aug 25, 2017 08:00:00 GMT +1"));
 						var now = new Date();
@@ -89,7 +88,7 @@
 						+'<li><div><span>' + minutes +'</span>MINUTE' + (minutes > 1 ? 'S' : '') +'</div></li>'
 						+'<li><div><span>' + seconds +'</span>SECOND' + (seconds > 1 ? 'S' : '') +'</div></li>';
 					})();
-				</script>
+				</script> -->
 				<!-- //flexSlider 
 				<script defer src="js/jquery.flexslider.js"></script>
 				<script type="text/javascript">
@@ -106,21 +105,21 @@
 		</div>
 	</div>
 </div>
-<!-- <div class="w3-about text-center">
+<div class="w3-about text-center">
 	<div class="container">
-		<h2 class="w3ls_head">The Clock is Ticking</h2>
+		<h2 class="w3ls_head">Posters</h2>
 		<p class="para"><span style="color: white;"><br><br><br><br></span></p>
 		<div class="w3-ab-top">
 			<div class="col-md-4 "></div>
 			<div class="col-md-4 ">
-				<ul id="countdown" class="col-md-3 pull-right"></ul>
+				<!-- <ul id="countdown" class="col-md-3 pull-right"></ul> -->
 			</div>
 			<div class="col-md-4 "></div>
 			<div class="clearfix"></div>
 		</div>
 		<p class="para"><span style="color: white;"><br><br><br><br></span></p>
 	</div>
-</div> -->
+</div>
 	<div class="services news">
 		<div class="container"> 
 			<div class="new-w3l">
@@ -160,10 +159,11 @@
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Spot Registration</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal3">SHUTTER UP</a></h4> 
-								<p>Photography is the simultaneous recognition in a fraction of a second of the significance of an event. Do you have a skill in capturing photos? Then here's an opportunity for it...<br></p> 
+								<p>Do you have a skill in capturing photos? Then here's an opportunity for it</p> 
 							</div>
 						</div>
 					</div>
+					<div class="clearfix"> </div>
 					<div class="col-md-4 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
@@ -188,7 +188,19 @@
 							</div>
 						</div>
 					</div>
-					<div class="clearfix"> </div>
+					<div class="col-md-4 news-w3lgrids">
+						<div class="news-gridtext">
+							<div class="news-w3img">
+								<a href="#" data-toggle="modal" data-target="#myModal5"><img src="images/general/life.png" class="img-responsive zoom-img" alt=""/></a>
+							</div>
+							<div class="news-w3imgtext">
+								<h5 class="w3-agilep">&nbsp;&nbsp;Exhibition&nbsp;&nbsp;</h5>
+								<h4><a href="#" data-toggle="modal" data-target="#myModal3">AVENGERS</a></h4> 
+								<p>An exhibition of life rescue operation equipments</p> 
+							</div>
+						</div>
+					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -358,6 +370,22 @@
 					</div>
 				</div>
 				<div class="modal video-modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModal3">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								AVENGERS
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+							</div>
+							<section>
+								<div class="modal-body">
+									<!-- <img src="images/drone.jpg" alt=" " class="img-responsive" /> -->
+									<p>An Exhibition of life rescue operation equipments.<br>Venue: R &amp; D Block<br>Date: 25th and 26th August 2017</p>
+								</div>
+							</section>
+						</div>
+					</div>
+				</div>
+				<div class="modal video-modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModal4">
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
