IT Project Presentation

--- a/events.html
+++ b/events.html
@@ -1043,14 +1043,16 @@
 										<q><i>So you have built the most amazing thing!! That does the most amazing thing, Hold your zeal, for we provide you the arena to showcase your masterpiece.</i></q>Rules
 										<ul>
 											<li>Each team can have maximum of 3 members</li>
-											<li>Organization committee has right to disqualify participants in case of any malpractices.</li>
-											<li>Abstracts of the projects should be submitted at the venue. (3 Copies)</li>
+											<li>Organization committee has right to disqualify participants in case of any malpractices. The organizers reserve the right to change/update the rules of the contest at any point of time and will do their best to inform that to the participants. However, it is ultimately the responsibility of the teams to keep themselves updated.</li>
 											<li>The decisions of the Judges will be final.</li>
 											<li>All contestants are required to present a valid ID-card.</li>
 											<li>The presentation will not exceed a maximum time limit of 20 minutes and will be given proper notice by a timekeeper. No reduction in score will be given for a presentation of less than 20 minutes. Presentations exceeding 20 minutes will not receive a first place award, regardless of score.</li>
 											<li>The projects can be in any software field or area.</li>
+											<li>Project abstract should be mailed on or before 23 rd August. Abstract should include email id, name of the participants and the name of their institution. It should be send to <b>bodhi10projexp@gmail.com</b></li>
+											<li>Confirmed list of project selected for presentation will be announced on 24th August 2017.</li>
+											<li>Participants must report at the venue at least 20 minutes before the event commences.</li>
 										</ul>
-										<br>STAFF CO-ORDINATOR: Mr. Jacob Mathai<br>STUDENT CO-ORDINATORS: Anjali Babychen (9446365408)<br>PRIZE MONEY: FIRST-Rs.2000<br>Regestration Fee:  ₹100<br>Venue: A104</p>
+										<br>STAFF CO-ORDINATOR: Mr. Jacob Mathai, Juliet A Murali<br>STUDENT CO-ORDINATORS: Anjali Babychen (9446365408)<br>PRIZE MONEY: FIRST-Rs.2000<br>Regestration Fee:  ₹100<br>Venue: A104</p>
 									</div>
 								</section>
 							</div>
