--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link rel="icon" href="../images/bodhi.png">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" property="" />
+	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<link href="css/font-awesome.css" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/scroll.js"></script>
 </head>
 <body>
 	<div class="banner jarallax">
@@ -50,77 +51,10 @@
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-		<div class="w3layouts-banner">
-			<div class="container">
-				<section class="slider">
-					<div class="flexslider">
-						<ul class="slides">
-							<!-- <li>
-								<div class="agileits_w3layouts_banner_info">
-									<h3>Coming Soon!!!</h3>
-								</div>
-							</li> -->
-						</ul>
-						<!-- <ul id="countdown" class="col-md-3 pull-right"></ul> -->
-					</div>
-					
-				</section>
-				<script type="text/javascript">
-					(function countdown(){   
-						var launch_date = new Date (Date.parse("Aug 25, 2017 08:00:00 GMT +1"));
-						var now = new Date();
-						var days; var hours; var minutes; var seconds; var rest;
-						seconds = rest = Math.floor(((launch_date.getTime() - now.getTime()) / 1000));
-						days = zero (Math.floor(seconds / 86400));
-						seconds -= days * 86400;
-						hours = zero (Math.floor(seconds / 3600));
-						seconds -= hours * 3600;
-						minutes = zero (Math.floor(seconds / 60));
-						seconds -= minutes * 60;
-						seconds = zero (Math.floor(seconds));
-						function zero(n){
-							return (n < 10 ? '0' : false) + n;  
-						}
-						rest <= 0 ? days = hours = minutes = seconds = '00' : setTimeout(countdown, 1000);
-
-						document.getElementById('countdown').innerHTML =
-						'<li><div><span>' + days +'</span>DAY' + (days > 1 ? 'S' : '') +'</div></li>'
-						+'<li><div><span>' + hours +'</span>HOUR' + (hours > 1 ? 'S' : '') +'</div></li>'
-						+'<li><div><span>' + minutes +'</span>MINUTE' + (minutes > 1 ? 'S' : '') +'</div></li>'
-						+'<li><div><span>' + seconds +'</span>SECOND' + (seconds > 1 ? 'S' : '') +'</div></li>';
-					})();
-				</script>
-				<!-- //flexSlider 
-				<script defer src="js/jquery.flexslider.js"></script>
-				<script type="text/javascript">
-					$(window).load(function(){
-						$('.flexslider').flexslider({
-							animation: "slide",
-							start: function(slider){
-								$('body').removeClass('loading');
-							}
-						});
-					});
-				</script> -->
-			</div>
-		</div>
 	</div>
 </div>
-<!-- <div class="w3-about text-center">
-	<div class="container">
-		<h2 class="w3ls_head">The Clock is Ticking</h2>
-		<p class="para"><span style="color: white;"><br><br><br><br></span></p>
-		<div class="w3-ab-top">
-			<div class="col-md-4 "></div>
-			<div class="col-md-4 ">
-				<ul id="countdown" class="col-md-3 pull-right"></ul>
-			</div>
-			<div class="col-md-4 "></div>
-			<div class="clearfix"></div>
-		</div>
-		<p class="para"><span style="color: white;"><br><br><br><br></span></p>
-	</div>
-</div> -->
+<!-- Go to top button -->
+<a href="#" id="return-to-top" onclick="returnTop()"><i class="icon-chevron-up"></i></a>
 	<div class="services news">
 		<div class="container"> 
 			<div class="new-w3l">
