--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
 					<div class="col-md-4 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#myModal5"><img src="images/general/life.png" class="img-responsive zoom-img" alt=""/></a>
+								<a href="#" data-toggle="modal" data-target="#myModal5"><img src="images/general/whale.png" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
-								<h5 class="w3-agilep">&nbsp;&nbsp;Exhibition&nbsp;&nbsp;</h5>
-								<h4><a href="#" data-toggle="modal" data-target="#myModal3">AVENGERS</a></h4> 
-								<p>An exhibition of life rescue operation equipments</p> 
+								<h5 class="w3-agilep">&nbsp;&nbsp;Dare Contest&nbsp;&nbsp;</h5>
+								<h4><a href="#" data-toggle="modal" data-target="#myModal3">BLUE WHALE</a></h4> 
+								<p>Its time for some real fun.. U Guys Ready???</p> 
 							</div>
 						</div>
 					</div>
@@ -385,17 +385,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="modal video-modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModal4">
+				<div class="modal video-modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModal5">
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
-								AVENGERS
+								BLUE WHALE - Games, Tattoos, Puzzles
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 							</div>
 							<section>
 								<div class="modal-body">
 									<!-- <img src="images/drone.jpg" alt=" " class="img-responsive" /> -->
-									<p>An Exhibition of life rescue operation equipments.<br>Venue: R &amp; D Block<br>Date: 25th and 26th August 2017</p>
+									<p>Its time for some real fun<br>Venue: R &amp; D Block<br>Date: 25th August 2017<br>Coordinators: Albin Abraham (8547296614)<br>John Mathew (9745703277)</p>
 								</div>
 							</section>
 						</div>
