--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Spot Registration</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal2">4'S FOOTBALL</a></h4> 
-								<p>Have you played $'s Football? Why don't you just git it a try?</p>
+								<p>Have you played 4's Football? Why don't you just give it a try?</p>
 							</div>
 						</div>
 					</div>
