--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								<a href="#" data-toggle="modal" data-target="#myModal4"><img src="images/general/life.png" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
-								<h5 class="w3-agilep">&nbsp;&nbsp;Exhibition&nbsp;&nbsp;</h5>
+								<h5 class="w3-agilep">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exhibition&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5>
 								<h4><a href="#" data-toggle="modal" data-target="#myModal3">AVENGERS</a></h4> 
 								<p>An exhibition of life rescue operation equipments</p> 
 							</div>
