--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							</div>
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exhibition&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h5>
-								<h4><a href="#" data-toggle="modal" data-target="#myModal3">AVENGERS</a></h4> 
+								<h4><a href="#" data-toggle="modal" data-target="#myModal4">AVENGERS</a></h4> 
 								<p>An exhibition of life rescue operation equipments</p> 
 							</div>
 						</div>
@@ -160,7 +160,19 @@
 							</div>
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">&nbsp;&nbsp;Dare Contest&nbsp;&nbsp;</h5>
-								<h4><a href="#" data-toggle="modal" data-target="#myModal3">BLUE WHALE</a></h4> 
+								<h4><a href="#" data-toggle="modal" data-target="#myModal5">BLUE WHALE</a></h4> 
+								<p>Its time for some real fun.. U Guys Ready???</p> 
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 news-w3lgrids">
+						<div class="news-gridtext">
+							<div class="news-w3img">
+								<a href="#" data-toggle="modal" data-target="#myModal16"><img src="images/EEE/drone.png" class="img-responsive zoom-img" alt=""/></a>
+							</div>
+							<div class="news-w3imgtext">
+								<h5 class="w3-agilep">&nbsp;&nbsp;Drone Racing&nbsp;&nbsp;</h5>
+								<h4><a href="#" data-toggle="modal" data-target="#myModal16">AeroTrac</a></h4> 
 								<p>Its time for some real fun.. U Guys Ready???</p> 
 							</div>
 						</div>
@@ -362,6 +374,22 @@
 								<div class="modal-body">
 									<!-- <img src="images/drone.jpg" alt=" " class="img-responsive" /> -->
 									<p>Its time for some real fun<br>Venue: R &amp; D Block<br>Date: 25th August 2017<br>Coordinators: Albin Abraham (8547296614)<br>John Mathew (9745703277)</p>
+								</div>
+							</section>
+						</div>
+					</div>
+				</div>
+				<div class="modal video-modal fade" id="myModal16" tabindex="-1" role="dialog" aria-labelledby="myModa116">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								AeroTrac
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+							</div>
+							<section>
+								<div class="modal-body">
+									<!-- <img src="images/drone.jpg" alt=" " class="img-responsive" /> -->
+									<p>Its time for some real fun<br>Venue: Main Auditorium &amp; Ground<br>Date: 26th August 2017<br>Coordinators: Sajay Thomas (8547533024)<br>Amal J (9745359717)</p>
 								</div>
 							</section>
 						</div>
