Pele On Wheels Reg

--- a/events.html
+++ b/events.html
@@ -489,7 +489,9 @@
 											<li>The organizers reserve the right to change the rules as they deem fit.</li>
 											<li>When a team is called for match, they must report within five minutes. Students must bring their college ID card.</li>
 											<li>Judges decision will be final.</li>
-										</ul><br>STAFF CO-ORDINATOR: Mr. Sharone Varghese<br>STUDENT CO-ORDINATORS: Liyas sunny (9400109707)<br>Jithin Reji (7403900273)<br>PRIZE MONEY: FIRST -Rs.5000, SECOND -Rs.3000<br>Rs.200/- per team (max. 2 members playing)<br>VENUE: Canteen Front</p>
+										</ul>
+										<a href="https://bodhi100.typeform.com/to/jUX5Or" target="_blank"><button>Register Now</button></a>
+										<br>STAFF CO-ORDINATOR: Mr. Sharone Varghese<br>STUDENT CO-ORDINATORS: Liyas sunny (9400109707)<br>Jithin Reji (7403900273)<br>PRIZE MONEY: FIRST -Rs.5000, SECOND -Rs.3000<br>Rs.200/- per team (max. 2 members playing)<br>VENUE: Canteen Front</p>
 									</div>
 								</section>
 							</div>
