--- a/events.html
+++ b/events.html
@@ -471,7 +471,7 @@
 											</li>
 										</ul><br><b>ROBOT SPECIFICATIONS</b>
 										<ul>
-											<li>The bot should fit in a box of dimensions 250mm X 250mm</li>
+											<li>The bot should fit in a box of dimensions 250mm X 250mm (50mm tolerance)</li>
 											<li>The weight limit of the robot for this competition is 5 Kg + 200g</li>
 											<li>The voltage should not be more than 24V.</li>
 											<li>The bot can be wired or wireless. The wireless bot shouldn’t be connected with any otherdevice (example cell phones) except a unique controller.</li>
