--- a/events.html
+++ b/events.html
@@ -413,7 +413,7 @@
 											<li>Complimentary food coupons will be issued for all participants</li>
 											<li>If number of participants are below 15, registration fees and prize money will be reduced.</li>
 										</ul>
-										<br>STAFF CO-ORDINATOR: Mr. Babu T Chacko, Mr. Aneesh Kurian<br><a href="http://bodhi100.typeform.com/to/kNiw6y" target="_blank"><button>Register Now</button></a><br>STUDENT CO-ORDINATORS: Sajay Thomas (8547533024), Amal J (9745359717)<br>PRIZE MONEY: FIRST -Rs.25000, SECOND -Rs.10000, THIRD - Rs.5000<br>Rs.1500/- per team (max. 4 members)<br>VENUE: Main Auditorium + Ground</p>
+										<br><a href="http://bodhi100.typeform.com/to/kNiw6y" target="_blank"><button>Register Now</button></a><br>STAFF CO-ORDINATOR: Mr. Babu T Chacko, Mr. Aneesh Kurian<br>STUDENT CO-ORDINATORS: Sajay Thomas (8547533024), Amal J (9745359717)<br>PRIZE MONEY: FIRST -Rs.25000, SECOND -Rs.10000, THIRD - Rs.5000<br>Rs.1500/- per team (max. 4 members)<br>VENUE: Main Auditorium + Ground</p>
 									</div>
 								</section>
 							</div>
