--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
 						</div>
 					</div>
 					<div class="col-md-4 news-w3lgrids">
-						<div class="news-gridtext">
+						<div class="news-gridtext" style="background: transparent;">
 							<div class="news-w3img">
-								<!-- <a href="#" data-toggle="modal" data-target="#myModal16"><img src="images/EEE/drone.png" class="img-responsive zoom-img" alt=""/></a> -->
+								<!-- <a href="#" data-toggle="modal" data-target="#myModal16"><img src="images/EEE/drone.png" class="img-responsive zoom-img" alt=""/></a> --><br><br><br><br><br><br><br><br><br><br><br><br>
+
 							</div>
-							<div class="news-w3imgtext">
-								<h5 class="w3-agilep">&nbsp;&nbsp;<a href="events.html">Click here for more</a>&nbsp;&nbsp;</h5>
-								<p><br><br></p>
+							<div  style="background: transparent; padding: 2em 1.5em; -moz-box-shadow: 0px 6px 5px rgba(25, 13, 15, 0.54); text-align: center; position: relative;">
+								<h5 class="w3-agilep">&nbsp;&nbsp;<a href="events.html"><span style="color: white;">Click here for more</span></a>&nbsp;&nbsp;</h5>
 							</div>
 						</div>
 					</div>
