--- a/events.html
+++ b/events.html
@@ -929,16 +929,18 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>Blind Coding (DAY - 1)<br>STAFF CO-ORDINATOR: Mr. Prince Kurian<br>Rules
+										<p>Blind Coding (DAY - 1)<br>Rules
 										<ul>
 											<li>Individual participations only.</li>
 											<li>Laptops, books or any kind of informatory medias are not allowed in the event hall.</li>
 											<li>Organization committee has right to disqualify a participant in case of any malpractices.</li>
-											<li>Decision of Judges is final.</li>
 											<li>Preliminary round will be an online objective test with a time limit of 25 minutes, and top 10 scorers will be selected for the final round.</li>
 											<li>All contestants are required to present a valid ID-card.</li>
 											<li>Selected contestants will be further informed about the short listed results.</li>
-										</ul><br>STUDENT CO-ORDINATORS: Athul Joy (9633899039)<br>Mahesh Mukundan (9567671552)<br>Mittu Margret George (9400978632)<br>PRIZE MONEY: FIRST - Rs.4000, SECOND - Rs.2000<br>Registration Fee: Rs.100<br>VENUE: Programming Lab</p>
+											<li>Blind coding will be done by participants, coding the question provided to them with the monitor turned off.</li>
+											<li>Contestants will only get a single try at attempting the question.</li>
+											<li>Decision of Judges is final.</li>
+										</ul><br>STAFF CO-ORDINATOR: Mr. Prince Kurian<br>STUDENT CO-ORDINATORS: Athul Joy (9633899039)<br>Mahesh Mukundan (9567671552)<br>Mittu Margret George (9400978632)<br>PRIZE MONEY: FIRST - Rs.4000, SECOND - Rs.2000<br>Registration Fee: Rs.100<br>VENUE: Programming Lab</p>
 									</div>
 								</section>
 							</div>
