Commented Blue Whale Contest

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4 news-w3lgrids">
+					<!-- <div class="col-md-4 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
 								<a href="#" data-toggle="modal" data-target="#myModal5"><img src="images/general/whale.png" class="img-responsive zoom-img" alt=""/></a>
@@ -327,7 +327,7 @@
 								<p>Its time for some real fun.. U Guys Ready???</p> 
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="col-md-4 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
